--- a/assets/stylesheets/responsive.css
+++ b/assets/stylesheets/responsive.css
@@ -158,6 +158,7 @@
 
   /*POST*/
 
+  .posts-container,
   .post.detail-view {
     padding: 0 10px;
   }
