--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -477,7 +477,7 @@ article .read-more.button{
   top: 0;
   bottom: 0;
   right: 0;
-  width: 1%;
+  width: 2%;
   -webkit-transition-property: all;
   transition-property: all;
   -webkit-transition-duration: .5s;
